samples/_failures_safe/1761559223_4c57b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_832930b7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_832930b7.c:152:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  152 |     Token e
      |     ^~~~~
./samples/SAFE/__tmp_832930b7.c:152:5: error: expected declaration or statement at end of input
